# Unvanquished

./: .appveyor.yml  .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  COPYING.txt  GPL.txt  README.CMAKE  README.md  README.txt  Visual_Studio32.bat  Visual_Studio32.cmake  Visual_Studio64.bat  Visual_Studio64.cmake  appveyor.yml  azure-pipelines.yml  basepak.sh  build-macosx-app-single.sh  build-macosx-app-universal.sh  build-macosx-app.sh  build-macosx-app32.sh  buildshaders.sh  cross-toolchain-mingw32.cmake  cross-toolchain-mingw64.cmake  daemon.conf  daemon.ini  download-dpk-torrent.sh  download-dpk.sh  download-paks  download-pk3-torrent.sh  download-pk3.sh  download-pk3.sh.in  flake.nix  libRocket.cmake  lua.cmake  mingw-w64-x86.cmake  (+9 more)
daemon/: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  COPYING.txt  GPL.txt  LICENSE.txt  README.md  appveyor.yml  src.cmake  srclibs.cmake
daemon/cmake/: DaemonCBSE.cmake  DaemonExternals.cmake  DaemonFlags.cmake  DaemonGame.cmake  DaemonGitRev.cmake  DaemonLibs.cmake  DaemonNacl.cmake  DaemonPCH.cmake  DaemonPlatform.cmake  FindCursesW.cmake  FindGLEW.cmake  FindLua.cmake  FindSpeex.cmake  FindTheora.cmake  cross-toolchain-mingw32.cmake  toolchain-pnacl.cmake
daemon/external_deps/: build.sh  cygtar.py
daemon/libs/crunch/: crn_decomp.h  crnlib.h
daemon/libs/detour/: DetourTileCacheBuilder.h
daemon/libs/include-bin/: .gitignore
daemon/libs/minizip/: ioapi.h  unzip.c
daemon/libs/mumblelink/: libmumblelink.cpp
daemon/libs/openexr/: AUTHORS
daemon/libs/pdcurses/pdcurses/: getch.c  keyname.c  mouse.c  termattr.c
daemon/libs/pdcurses/win32a/: pdcclip.c  pdckbd.c  pdcsetsc.c  pdcwin.h
daemon/libs/tinyformat/: tinyformat.h
daemon/libs/tinygettext/: dictionary.cpp  dictionary_manager.cpp  dictionary_manager.hpp  language.cpp  language.hpp  plural_forms.hpp  po_parser.cpp  unix_file_system.hpp
daemon/src/common/: Assert.h  Color.cpp  Color.h  Command.cpp  Command.h  Common.h  Compiler.h  Cvar.cpp  Cvar.h  Debugger.cpp  Defs.h  DisjointSets.h  Endian.h  FileSystem.cpp  FileSystem.h  LineEditData.cpp  LineEditData.h  Log.cpp  Log.h  Math.h  Network.h  Optional.h  Platform.h  Profiler.cpp  Profiler.h  Rcon.h  Serialize.h  String.cpp  String.h  System.cpp  System.h  Util.h
daemon/src/common/IPC/: Channel.h  CommandBuffer.cpp  CommandBuffer.h  Common.h  CommonSyscalls.h  Primitives.cpp  Primitives.h
daemon/src/common/cm/: cm_load.cpp  cm_local.h  cm_patch.cpp  cm_patch.h  cm_plane.cpp  cm_polylib.cpp  cm_polylib.h  cm_public.h  cm_test.cpp  cm_trace.cpp  cm_trisoup.cpp
daemon/src/common/math/: Vector.h
daemon/src/engine/: crash_server_linux.cpp  crash_server_windows.cpp
daemon/src/engine/audio/: ALObjects.cpp  ALObjects.h  Audio.cpp  Audio.h  AudioData.h  AudioPrivate.h  Emitter.cpp  Emitter.h  OggCodec.cpp  OpusCodec.cpp  Sample.cpp  Sample.h  Sound.cpp  Sound.h  SoundCodec.cpp  SoundCodec.h  WavCodec.cpp
daemon/src/engine/botlib/: bot_debug.cpp  bot_debug.h  bot_load.cpp  bot_local.cpp  bot_local.h  bot_nav.cpp  bot_nav_edit.cpp  bot_navdraw.h  bot_types.h  nav.h
daemon/src/engine/client/: ClientApplication.cpp  cg_api.h  cg_msgdef.h  cin_ogm.cpp  cl_avi.cpp  cl_cgame.cpp  cl_cin.cpp  cl_console.cpp  cl_input.cpp  cl_irc.cpp  cl_keys.cpp  cl_main.cpp  cl_parse.cpp  cl_scrn.cpp  client.h  dl_main.cpp  keycodes.h  keys.h  rocketColorInput.h  rocketConditionalElement.h  rocketDataGrid.h  rocketDataSelect.h  rocketFocusManager.h  rocketFormControlSelect.h  rocketMiscText.h  rocketProgressBar.h  rocket_dataformatter.cpp  rocket_documents.cpp  rocket_element.cpp  rocket_textelements.cpp
daemon/src/engine/crash_server/: crash_server_linux.cpp  crash_server_windows.cpp
daemon/src/engine/framework/: Application.cpp  Application.h  BaseCommands.cpp  BaseCommands.h  CommandBufferHost.cpp  CommandBufferHost.h  CommandSystem.cpp  CommandSystem.h  CommonVMServices.cpp  CommonVMServices.h  ConsoleField.cpp  ConsoleField.h  ConsoleHistory.cpp  ConsoleHistory.h  CrashDump.cpp  CrashDump.h  Crypto.cpp  Crypto.h  CvarSystem.cpp  CvarSystem.h  LogSystem.cpp  LogSystem.h  Network.cpp  Network.h  Profiler.cpp  Profiler.h  (+9 more)
daemon/src/libs/: .gitattributes
daemon/src/shared/: CommandBufferClient.cpp  CommandBufferClient.h  CommonProxies.cpp  CommonProxies.h  VMMain.cpp  VMMain.h
libs/libRocket/: CMakeLists.txt
src/libs/duktape/: CMakeLists.txt  duktape.c  duktape.h
src/libs/glew/: CMakeLists.txt  Makefile
src/libs/glsl-optimizer/: CMakeLists.txt
src/libs/jpeg/: CMakeLists.txt  jmorecfg.h
src/libs/libRocket/: CMakeLists.txt
src/libs/libsdl/: CMakeLists.txt
src/libs/libtheora/: AUTHORS  CHANGES  LICENSE  Makefile.am  README  SConstruct  autogen.sh  configure.ac  libtheora.spec.in  theora-uninstalled.pc.in  theora.pc.in
src/libs/libwebp/: CMakeLists.txt
src/tools/lcc/: CMakeLists.txt  LOG
unvanquished/: .gitattributes  CMakeLists.txt  COPYING.txt  GPL.txt  archlinux  basepak.sh  build-macosx-app-single.sh  build-macosx-app-universal.sh  cmake  download-pk3-torrent.sh  download-pk3.sh  external_deps  macosx  main  tarball.sh  update-version-number.sh
unvanquished/cmake/: CMakeParseArguments.cmake
unvanquished/daemon/: .gitattributes  COPYING.txt  GPL.txt  archlinux  basepak.sh  build-macosx-app-single.sh  build-macosx-app-universal.sh  cmake  debian  download-pk3-torrent.sh  download-pk3.sh  external_deps  macosx  main  tarball.sh  update-version-number.sh
unvanquished/daemon/cmake/: CMakeParseArguments.cmake  DaemonExternals.cmake  DaemonFlags.cmake  DaemonGame.cmake  DaemonLibs.cmake  DaemonUtils.cmake  FindCursesW.cmake  FindGLEW.cmake  FindGMP.cmake  FindGeoIP.cmake  FindNettle.cmake  FindOgg.cmake  FindOpus.cmake  FindSDL2.cmake  FindSpeex.cmake  FindTheora.cmake  FindVorbis.cmake  FindWebP.cmake  cross-toolchain-linux32.cmake  cross-toolchain-mingw32.cmake  cross-toolchain-mingw64.cmake
unvanquished/daemon/src/: common  engine  utils
unvanquished/src/: gamelogic  utils
unvanquished/src/libs/: minizip  nacl  zlib
(+5340 files in other folders)
